putting everything together

--- a/08_paper_replicating_ViT.ipynb
+++ b/08_paper_replicating_ViT.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOYiauw6SWvd0pa3QeXRTwN",
+      "authorship_tag": "ABX9TyOeOCK7GwBy+WmU0evr8kny",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1437,10 +1437,206 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 4.7 Creating the position embedding\n",
+        "\n",
+        "Want to: create a series of 1D learnable position embeddings and to add them to the sequence of pathc embeddings."
+      ],
+      "metadata": {
+        "id": "9pMmqwykiTF4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# View the sequence of patch embeddings with the prepended class embedding\n",
+        "patch_embedded_image_with_class_embedding.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Eh9EhcaRj50Z",
+        "outputId": "176166c0-cfdb-46d9-f5e1-ecfe41dd82ba"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 197, 768])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculate N (number_of_patches)\n",
+        "number_of_patches = int((height*width)/ patch_size**2)\n",
+        "number_of_patches\n",
+        "\n",
+        "# Get the embedding dimension\n",
+        "embedding_dimension = patch_embedded_image_with_class_embedding.shape[-1]\n",
+        "embedding_dimension\n",
+        "\n",
+        "# Create the learnable 1D position embedding\n",
+        "position_embedding = nn.Parameter(torch.ones(1,\n",
+        "                                             number_of_patches + 1,\n",
+        "                                             embedding_dimension),\n",
+        "                                  requires_grad=True)\n",
+        "position_embedding,position_embedding.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-Q-lrs_Gj-39",
+        "outputId": "fdd2f053-4f1d-446d-8978-79e0c2906166"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(Parameter containing:\n",
+              " tensor([[[1., 1., 1.,  ..., 1., 1., 1.],\n",
+              "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
+              "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
+              "          ...,\n",
+              "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
+              "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
+              "          [1., 1., 1.,  ..., 1., 1., 1.]]], requires_grad=True),\n",
+              " torch.Size([1, 197, 768]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Add the position embedding to the patch and class token embedding\n",
+        "patch_and_position_embedding = patch_embedded_image_with_class_embedding + position_embedding\n",
+        "print(patch_and_position_embedding)\n",
+        "print(f'patch_and_position_embedding shape : {patch_and_position_embedding.shape}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nAsuyZ0BkWQy",
+        "outputId": "91aede8a-0f0c-43ba-bf17-8caed7e91e22"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[[2.0000, 2.0000, 2.0000,  ..., 2.0000, 2.0000, 2.0000],\n",
+            "         [0.8088, 1.0504, 1.0060,  ..., 1.0969, 0.8780, 1.0865],\n",
+            "         [0.7322, 0.9515, 0.8925,  ..., 1.0406, 0.9744, 1.2477],\n",
+            "         ...,\n",
+            "         [0.2081, 1.0219, 0.7603,  ..., 1.6045, 0.6390, 1.3923],\n",
+            "         [0.9251, 1.0468, 0.9050,  ..., 0.9397, 0.8772, 1.3173],\n",
+            "         [0.8739, 1.0102, 1.0067,  ..., 1.0297, 0.8621, 1.0971]]],\n",
+            "       grad_fn=<AddBackward0>)\n",
+            "patch_and_position_embedding shape : torch.Size([1, 197, 768])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 4.8 Putting it all together: from image to embedding"
+      ],
+      "metadata": {
+        "id": "F6EPnymdk-mo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Set seeds\n",
+        "set_seeds()\n",
+        "\n",
+        "# 1. Set the patch size\n",
+        "patch_size = 16\n",
+        "\n",
+        "# 2.Print shapes of the original image tensor and get the image dimensions\n",
+        "print(f'Image tensor shape: {image.shape}')\n",
+        "height, width = image.shape[1], image.shape[2]\n",
+        "\n",
+        "# 3. Get image tensor and add a batch dimension\n",
+        "x = image.unsqueeze(0)\n",
+        "print(f'Input image shape: {x.shape}')\n",
+        "\n",
+        "# 4. Create patch embedding layer\n",
+        "patch_embedding_layer = PatchEmbedding(in_channels = 3,\n",
+        "                                       patch_size=patch_size,\n",
+        "                                       embedding_dim = 768)\n",
+        "# 5. Pass input image through PatchEmbedding layer\n",
+        "patch_embedding = patch_embedding_layer(x)\n",
+        "print(f'Patch embedding shape: {patch_embedding.shape}')\n",
+        "\n",
+        "#  6.  Create class token embedding\n",
+        "batch_size = patch_embedding.shape[0]\n",
+        "embedding_simension = patch_embedding.shape[-1]\n",
+        "class_token = nn.Parameter(torch.ones(batch_size,1,embedding_dimension),\n",
+        "                           requires_grad = True) # to make sure it is learnable\n",
+        "print(f'Class token embedding shape: {class_token.shape}')\n",
+        "\n",
+        "# 7. Prepend the class token embedding to patch embedding\n",
+        "patch_embedding_class_token = torch.cat((class_token, patch_embedding),dim=1)\n",
+        "print(f'Class embedding with class token shape: {patch_embedding_class_token.shape}')\n",
+        "\n",
+        "# 8. Create position embedding\n",
+        "number_of_patches = int((height * width) / patch_size ** 2)\n",
+        "position_embedding = nn.Parameter(torch.ones(1,number_of_patches + 1,embedding_dimension),\n",
+        "                                  requires_grad = True)\n",
+        "\n",
+        "# 9. Add the position embedding to patch embedding with class token\n",
+        "patch_and_position_embedding = patch_embedding_class_token + position_embedding\n",
+        "print(f'Patch and position embedding shape: {patch_and_position_embedding.shape}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tXOm38MhmedO",
+        "outputId": "9e03ad63-8553-4019-f545-97aabceffbff"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Image tensor shape: torch.Size([3, 224, 224])\n",
+            "Input image shape: torch.Size([1, 3, 224, 224])\n",
+            "Patch embedding shape: torch.Size([1, 196, 768])\n",
+            "Class token embedding shape: torch.Size([1, 1, 768])\n",
+            "Class embedding with class token shape: torch.Size([1, 197, 768])\n",
+            "Patch and position embedding shape: torch.Size([1, 197, 768])\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "9pMmqwykiTF4"
+        "id": "Paz3DnFinKOW"
       },
       "execution_count": null,
       "outputs": []
