Turning Equation 3 into Code (MLP)

--- a/08_paper_replicating_ViT.ipynb
+++ b/08_paper_replicating_ViT.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyN6Z5JdKElwr3vJjSc37E5F",
+      "authorship_tag": "ABX9TyNixvv7qYW3IfOzk10LCHDZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1779,10 +1779,167 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 6. Multilayer Perceptron (MLP)\n",
+        "\n",
+        "* **MLP** = The MLP contains two layers with a GELU non-linearity\n",
+        "  * MLP =a quite broad term for a block with a series of layer(s), layers can be multiple or even only one hidden layer.\n",
+        "  *  Layers can mean: fully-connected, dense, linear, feed-forward, all are often similar names for the same thing. In PyTorch they are often called `torch.nn.Linear()` and in Tensorflow `tf.keras.layers.Dense()`\n",
+        "  * GELU in PyTorch : https://pytorch.org/docs/stable/generated/torch.nn.GELU.html\n",
+        "  * MLP: number of hidden units ( see table 1) = MLP size\n",
+        "  * **Dropout**:  Dropout, when used, is applied after every dense layer except for the the qkv-projections and directly after adding positional- to patch embeddings.\n",
+        "  * Value for Dropout: in Table 3\n",
+        "\n",
+        "  In pseudocode:\n",
+        "\n",
+        "  ```python\n",
+        "# MLP\n",
+        "x = linear -> non-linear -> dropout -> linear -> dropout\n",
+        "  ```"
+      ],
+      "metadata": {
+        "id": "fZTchPOg3pHL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class MLPBlock(nn.Module):\n",
+        "  def __init__(self,\n",
+        "               embedding_dim:int=768,\n",
+        "               mlp_size: int =3072,\n",
+        "               dropout: int =0.1):\n",
+        "    super().__init__()\n",
+        "\n",
+        "    # Create the norm layers (LN)\n",
+        "    self.layer_norm = nn.LayerNorm(normalized_shape = embedding_dim)\n",
+        "\n",
+        "    # Create thew MLP\n",
+        "    self.mlp = nn.Sequential(\n",
+        "        nn.Linear(in_features = embedding_dim,\n",
+        "                  out_features = mlp_size),\n",
+        "        nn.GELU(),\n",
+        "        nn.Dropout(p=dropout),\n",
+        "        nn.Linear(in_features = mlp_size,\n",
+        "                  out_features=embedding_dim),\n",
+        "        nn.Dropout(p=dropout)\n",
+        "    )\n",
+        "\n",
+        "  def forward(self,x):\n",
+        "    x = self.layer_norm(x)\n",
+        "    x = self.mlp(x)\n",
+        "    # return self.mlp(self.layer_nornm(x)) faster due to operator fusion\n",
+        "    return x"
+      ],
+      "metadata": {
+        "id": "fmpa06bA7ZEr"
+      },
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create an instance of MLPBlock\n",
+        "mlp_block = MLPBlock(embedding_dim=768,\n",
+        "                     mlp_size = 3072,\n",
+        "                     dropout = 0.1)\n",
+        "# Pass the output of the MSA block through the MLP block\n",
+        "patched_image_through_mlp_block = mlp_block(patched_image_through_msa_block)\n",
+        "print(f'Input shape of MLP block: {patched_image_through_msa_block.shape}')\n",
+        "print(f'Output shape of MLP block: {patched_image_through_mlp_block.shape}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Mjt-AHGe9euE",
+        "outputId": "281804c5-af32-42af-ce94-2fbbdfc7489e"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Input shape of MLP block: torch.Size([1, 197, 768])\n",
+            "Output shape of MLP block: torch.Size([1, 197, 768])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "patched_image_through_msa_block"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DDRVw-1b96jM",
+        "outputId": "f46d096b-41c6-4ebb-a851-de6fa6a631df"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[-0.2206, -0.2207,  0.0653,  ..., -0.4156,  0.8594, -0.4639],\n",
+              "         [-0.2128, -0.1943,  0.0830,  ..., -0.4113,  0.8884, -0.4987],\n",
+              "         [-0.2096, -0.2002,  0.0648,  ..., -0.4120,  0.8810, -0.4949],\n",
+              "         ...,\n",
+              "         [-0.2035, -0.1960,  0.0743,  ..., -0.4153,  0.8868, -0.4997],\n",
+              "         [-0.2129, -0.2051,  0.0644,  ..., -0.4144,  0.8879, -0.4969],\n",
+              "         [-0.2001, -0.2203,  0.0613,  ..., -0.4065,  0.8797, -0.4885]]],\n",
+              "       grad_fn=<TransposeBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "patched_image_through_mlp_block"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qXofUZyv-Pjy",
+        "outputId": "461db234-e6f0-482b-d20e-ea9c555e4bc7"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[-0.1931, -0.1392,  0.2763,  ..., -0.0840,  0.2044, -0.1872],\n",
+              "         [-0.1617, -0.1235,  0.0000,  ..., -0.0363,  0.2916, -0.0878],\n",
+              "         [-0.1997, -0.0902,  0.0000,  ..., -0.1158,  0.2046, -0.1633],\n",
+              "         ...,\n",
+              "         [-0.2168, -0.0556,  0.0466,  ..., -0.0279,  0.1273, -0.1516],\n",
+              "         [-0.1436, -0.1812,  0.1819,  ..., -0.0071,  0.0522, -0.0000],\n",
+              "         [-0.1218, -0.0479, -0.0606,  ..., -0.0872,  0.2476, -0.1885]]],\n",
+              "       grad_fn=<MulBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "fZTchPOg3pHL"
+        "id": "poa07dSa-QUF"
       },
       "execution_count": null,
       "outputs": []
