loss fn and optimizer

--- a/08_paper_replicating_ViT.ipynb
+++ b/08_paper_replicating_ViT.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyO9eefwebXaejYxzZHbsAtt",
+      "authorship_tag": "ABX9TyN3s8PW9xIPR+NudatxWoyb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2374,10 +2374,84 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## 9. Setting up training code for our custom ViT\n"
+      ],
       "metadata": {
         "id": "FYoagmUdiPoY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 9.1 Creating an optimizer\n",
+        "\n",
+        "The paper states it uses the Adam optimizer( section 4, Ttraining & fine-tuning)\n",
+        "with $B1$ value of 0.9 and $B2$ of 0.999 (defaults) and weight decay of 0.1.\n",
+        "\n",
+        "Weight Decay, or Regularization, is a regularization technique applied to the weights of a neural network. We minimize a loss function compromising both the primary loss function and a penalty on the Norm of the weights.\n"
+      ],
+      "metadata": {
+        "id": "tnMwyx38jBDp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "optimizer = torch.optim.Adam(vit.parameters(),\n",
+        "                             lr  = 1e-3,\n",
+        "                             betas = (0.9,0.999),\n",
+        "                             weight_decay=0.1)"
+      ],
+      "metadata": {
+        "id": "iFyjOaqbkjD8"
+      },
+      "execution_count": 65,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 9.2 Creating a loss function\n",
+        "\n",
+        "The ViT paper doesnt mention its loss function.\n",
+        "\n",
+        "However, since it is a multi-class classification, we will use the `torch.nn.CrossEntropyLoss()`"
+      ],
+      "metadata": {
+        "id": "49S1XxZVjMgt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss_fn = torch.nn.CrossEntropyLoss()"
+      ],
+      "metadata": {
+        "id": "GZ8_l60ujObI"
+      },
+      "execution_count": 66,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 9.3 Training the ViT Model\n"
+      ],
+      "metadata": {
+        "id": "XulzLbjelNt6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from going_modular.going_modular import engine\n",
+        "\n",
+        "results = engine.train()"
+      ],
+      "metadata": {
+        "id": "BKOXTWUrlfn1"
       },
       "execution_count": null,
       "outputs": []
