Training our Custom ViT on Food Vision Mini

--- a/08_paper_replicating_ViT.ipynb
+++ b/08_paper_replicating_ViT.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyN3s8PW9xIPR+NudatxWoyb",
+      "authorship_tag": "ABX9TyPxpyTutjH+Akhb41Hlcn+s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15,7 +15,353 @@
     "language_info": {
       "name": "python"
     },
-    "accelerator": "GPU"
+    "accelerator": "GPU",
+    "widgets": {
+      "application/vnd.jupyter.widget-state+json": {
+        "7cf9769e89b7498fb01860449907b4e7": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "HBoxModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_dom_classes": [],
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "HBoxModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/controls",
+            "_view_module_version": "1.5.0",
+            "_view_name": "HBoxView",
+            "box_style": "",
+            "children": [
+              "IPY_MODEL_421e268863524a0aabab5e9a48da7789",
+              "IPY_MODEL_9b8713d2201a452598da3d4e398b12e2",
+              "IPY_MODEL_adf3db3ca6ed4e958babe89b14947ac2"
+            ],
+            "layout": "IPY_MODEL_9371645d5e474cbeb43864b8d3dd3066"
+          }
+        },
+        "421e268863524a0aabab5e9a48da7789": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "HTMLModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_dom_classes": [],
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "HTMLModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/controls",
+            "_view_module_version": "1.5.0",
+            "_view_name": "HTMLView",
+            "description": "",
+            "description_tooltip": null,
+            "layout": "IPY_MODEL_ade721b76d1b4e4eb03de4dac69d3d00",
+            "placeholder": "​",
+            "style": "IPY_MODEL_d1bb8fe7537743f0971e91242dd98fa9",
+            "value": "100%"
+          }
+        },
+        "9b8713d2201a452598da3d4e398b12e2": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "FloatProgressModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_dom_classes": [],
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "FloatProgressModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/controls",
+            "_view_module_version": "1.5.0",
+            "_view_name": "ProgressView",
+            "bar_style": "success",
+            "description": "",
+            "description_tooltip": null,
+            "layout": "IPY_MODEL_ebdf39c6176543559a86622a2a271749",
+            "max": 10,
+            "min": 0,
+            "orientation": "horizontal",
+            "style": "IPY_MODEL_33a598eb3b7b477584aadb258897737e",
+            "value": 10
+          }
+        },
+        "adf3db3ca6ed4e958babe89b14947ac2": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "HTMLModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_dom_classes": [],
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "HTMLModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/controls",
+            "_view_module_version": "1.5.0",
+            "_view_name": "HTMLView",
+            "description": "",
+            "description_tooltip": null,
+            "layout": "IPY_MODEL_87e09ce6f1494e20a18952ad5ebdca3b",
+            "placeholder": "​",
+            "style": "IPY_MODEL_c93f68fcee334ef1804df888959851e8",
+            "value": " 10/10 [01:44&lt;00:00, 10.21s/it]"
+          }
+        },
+        "9371645d5e474cbeb43864b8d3dd3066": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.2.0",
+            "_model_name": "LayoutModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "LayoutView",
+            "align_content": null,
+            "align_items": null,
+            "align_self": null,
+            "border": null,
+            "bottom": null,
+            "display": null,
+            "flex": null,
+            "flex_flow": null,
+            "grid_area": null,
+            "grid_auto_columns": null,
+            "grid_auto_flow": null,
+            "grid_auto_rows": null,
+            "grid_column": null,
+            "grid_gap": null,
+            "grid_row": null,
+            "grid_template_areas": null,
+            "grid_template_columns": null,
+            "grid_template_rows": null,
+            "height": null,
+            "justify_content": null,
+            "justify_items": null,
+            "left": null,
+            "margin": null,
+            "max_height": null,
+            "max_width": null,
+            "min_height": null,
+            "min_width": null,
+            "object_fit": null,
+            "object_position": null,
+            "order": null,
+            "overflow": null,
+            "overflow_x": null,
+            "overflow_y": null,
+            "padding": null,
+            "right": null,
+            "top": null,
+            "visibility": null,
+            "width": null
+          }
+        },
+        "ade721b76d1b4e4eb03de4dac69d3d00": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.2.0",
+            "_model_name": "LayoutModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "LayoutView",
+            "align_content": null,
+            "align_items": null,
+            "align_self": null,
+            "border": null,
+            "bottom": null,
+            "display": null,
+            "flex": null,
+            "flex_flow": null,
+            "grid_area": null,
+            "grid_auto_columns": null,
+            "grid_auto_flow": null,
+            "grid_auto_rows": null,
+            "grid_column": null,
+            "grid_gap": null,
+            "grid_row": null,
+            "grid_template_areas": null,
+            "grid_template_columns": null,
+            "grid_template_rows": null,
+            "height": null,
+            "justify_content": null,
+            "justify_items": null,
+            "left": null,
+            "margin": null,
+            "max_height": null,
+            "max_width": null,
+            "min_height": null,
+            "min_width": null,
+            "object_fit": null,
+            "object_position": null,
+            "order": null,
+            "overflow": null,
+            "overflow_x": null,
+            "overflow_y": null,
+            "padding": null,
+            "right": null,
+            "top": null,
+            "visibility": null,
+            "width": null
+          }
+        },
+        "d1bb8fe7537743f0971e91242dd98fa9": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "DescriptionStyleModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "DescriptionStyleModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "StyleView",
+            "description_width": ""
+          }
+        },
+        "ebdf39c6176543559a86622a2a271749": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.2.0",
+            "_model_name": "LayoutModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "LayoutView",
+            "align_content": null,
+            "align_items": null,
+            "align_self": null,
+            "border": null,
+            "bottom": null,
+            "display": null,
+            "flex": null,
+            "flex_flow": null,
+            "grid_area": null,
+            "grid_auto_columns": null,
+            "grid_auto_flow": null,
+            "grid_auto_rows": null,
+            "grid_column": null,
+            "grid_gap": null,
+            "grid_row": null,
+            "grid_template_areas": null,
+            "grid_template_columns": null,
+            "grid_template_rows": null,
+            "height": null,
+            "justify_content": null,
+            "justify_items": null,
+            "left": null,
+            "margin": null,
+            "max_height": null,
+            "max_width": null,
+            "min_height": null,
+            "min_width": null,
+            "object_fit": null,
+            "object_position": null,
+            "order": null,
+            "overflow": null,
+            "overflow_x": null,
+            "overflow_y": null,
+            "padding": null,
+            "right": null,
+            "top": null,
+            "visibility": null,
+            "width": null
+          }
+        },
+        "33a598eb3b7b477584aadb258897737e": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "ProgressStyleModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "ProgressStyleModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "StyleView",
+            "bar_color": null,
+            "description_width": ""
+          }
+        },
+        "87e09ce6f1494e20a18952ad5ebdca3b": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.2.0",
+            "_model_name": "LayoutModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "LayoutView",
+            "align_content": null,
+            "align_items": null,
+            "align_self": null,
+            "border": null,
+            "bottom": null,
+            "display": null,
+            "flex": null,
+            "flex_flow": null,
+            "grid_area": null,
+            "grid_auto_columns": null,
+            "grid_auto_flow": null,
+            "grid_auto_rows": null,
+            "grid_column": null,
+            "grid_gap": null,
+            "grid_row": null,
+            "grid_template_areas": null,
+            "grid_template_columns": null,
+            "grid_template_rows": null,
+            "height": null,
+            "justify_content": null,
+            "justify_items": null,
+            "left": null,
+            "margin": null,
+            "max_height": null,
+            "max_width": null,
+            "min_height": null,
+            "min_width": null,
+            "object_fit": null,
+            "object_position": null,
+            "order": null,
+            "overflow": null,
+            "overflow_x": null,
+            "overflow_y": null,
+            "padding": null,
+            "right": null,
+            "top": null,
+            "visibility": null,
+            "width": null
+          }
+        },
+        "c93f68fcee334ef1804df888959851e8": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "DescriptionStyleModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "DescriptionStyleModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "StyleView",
+            "description_width": ""
+          }
+        }
+      }
+    }
   },
   "cells": [
     {
@@ -2447,11 +2793,76 @@
       "cell_type": "code",
       "source": [
         "from going_modular.going_modular import engine\n",
+        "set_seeds()\n",
         "\n",
-        "results = engine.train()"
+        "results = engine.train(model=vit,\n",
+        "                       train_dataloader = train_dataloader,\n",
+        "                       test_dataloader = test_dataloader,\n",
+        "                       epochs = 10,\n",
+        "                       optimizer = optimizer,\n",
+        "                       loss_fn = loss_fn,\n",
+        "                       device = device)"
       ],
       "metadata": {
-        "id": "BKOXTWUrlfn1"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 232,
+          "referenced_widgets": [
+            "7cf9769e89b7498fb01860449907b4e7",
+            "421e268863524a0aabab5e9a48da7789",
+            "9b8713d2201a452598da3d4e398b12e2",
+            "adf3db3ca6ed4e958babe89b14947ac2",
+            "9371645d5e474cbeb43864b8d3dd3066",
+            "ade721b76d1b4e4eb03de4dac69d3d00",
+            "d1bb8fe7537743f0971e91242dd98fa9",
+            "ebdf39c6176543559a86622a2a271749",
+            "33a598eb3b7b477584aadb258897737e",
+            "87e09ce6f1494e20a18952ad5ebdca3b",
+            "c93f68fcee334ef1804df888959851e8"
+          ]
+        },
+        "id": "BKOXTWUrlfn1",
+        "outputId": "6524bf28-1faa-44f1-eeec-96d631b4249b"
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "  0%|          | 0/10 [00:00<?, ?it/s]"
+            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "version_major": 2,
+              "version_minor": 0,
+              "model_id": "7cf9769e89b7498fb01860449907b4e7"
+            }
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch: 1 | train_loss: 3.8450 | train_acc: 0.2305 | test_loss: 1.0744 | test_acc: 0.5417\n",
+            "Epoch: 2 | train_loss: 1.1824 | train_acc: 0.3281 | test_loss: 1.3676 | test_acc: 0.1979\n",
+            "Epoch: 3 | train_loss: 1.3198 | train_acc: 0.2812 | test_loss: 1.2281 | test_acc: 0.2604\n",
+            "Epoch: 4 | train_loss: 1.3334 | train_acc: 0.2812 | test_loss: 1.9333 | test_acc: 0.1979\n",
+            "Epoch: 5 | train_loss: 1.5542 | train_acc: 0.2773 | test_loss: 1.1337 | test_acc: 0.2604\n",
+            "Epoch: 6 | train_loss: 1.1924 | train_acc: 0.4141 | test_loss: 2.3962 | test_acc: 0.1979\n",
+            "Epoch: 7 | train_loss: 1.3861 | train_acc: 0.4453 | test_loss: 2.1830 | test_acc: 0.1979\n",
+            "Epoch: 8 | train_loss: 1.3605 | train_acc: 0.3008 | test_loss: 1.4939 | test_acc: 0.2604\n",
+            "Epoch: 9 | train_loss: 1.2496 | train_acc: 0.4102 | test_loss: 1.1563 | test_acc: 0.5417\n",
+            "Epoch: 10 | train_loss: 1.3901 | train_acc: 0.2852 | test_loss: 1.2713 | test_acc: 0.2604\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "VDsd5RETl_ej"
       },
       "execution_count": null,
       "outputs": []
