Creating a Requirements File for Our Food Vision Mini App

--- a/09_PyTorch_Model_Deployment.ipynb
+++ b/09_PyTorch_Model_Deployment.ipynb
@@ -3686,10 +3686,135 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 8.8 Creating `requirements.txt`"
+      ],
+      "metadata": {
+        "id": "LaUevQR7vV-E"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The 3 main requirements are:\n",
+        "* torch\n",
+        "* torchvision\n",
+        "* gradio\n"
+      ],
+      "metadata": {
+        "id": "yAj433ZPvwv2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile demos/foodvision_mini/requirements.txt\n",
+        "torch==2.1.0\n",
+        "torchvision==0.16.0\n",
+        "gradio==3.45.0"
+      ],
+      "metadata": {
+        "id": "uQVMWRoswHlV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.__version__"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "hLDHm7JxwNLA",
+        "outputId": "fe99e584-0b24-4064-a570-7a23cda5b7ae"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'2.1.0+cu121'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torchvision.__version__"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "BT2IHsZkwPjX",
+        "outputId": "c8aff100-6a6b-4c17-ee3d-d99f8829b3c3"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'0.16.0+cu121'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 57
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "gr.__version__"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "ajDlaU5LwRSf",
+        "outputId": "bfe3d933-4cdd-4746-921f-5c99a7425b0c"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'3.45.0'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "LaUevQR7vV-E"
+        "id": "ZJFfuSWOwSzI"
       },
       "execution_count": null,
       "outputs": []
@@ -3700,7 +3825,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOaW3DpjqeqnACD+Df89DKr",
+      "authorship_tag": "ABX9TyMXEQWZ7BKYCzGe+0hKrx/X",
       "include_colab_link": true
     },
     "kernelspec": {
